tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/check_glob@TypeDependentNewInTemplateReportedAtCallSite.snap
---
source: tests/test_check_insta.rs
expression: "&json_results"
---
[
  {
    "loc": "00004:2-31",
    "source": 1,
    "nestingRange": "4:34-4:35",
    "syntax": "def,function",
    "type": "void (void)",
    "pretty": "function StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00004:2-31",
    "structured": 1,
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "args": [],
    "kind": "method",
    "parentsym": "T_StructUsedInTypeDependentNew0",
    "overrides": [],
    "props": [
      "instance",
      "user"
    ]
  },
  {
    "loc": "00004:2-31",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "StructUsedInTypeDependentNew0",
    "contextsym": "T_StructUsedInTypeDependentNew0"
  }
]
