tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/main@TypeDependentNewInMethodReportedAtCallSite.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/ForwardingTemplates.cpp/TypeDependentNewInMethodReportedAtCallSite
---
[
  {
    "loc": "00085:2-21",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "StructUsedInEmplace",
    "contextsym": "T_StructUsedInEmplace"
  },
  {
    "loc": "00090:4-18",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00091:4-23",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00094:4-16",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1EOS_",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00094:4-16",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "context": "use_maybe",
    "contextsym": "_Z9use_maybev"
  },
  {
    "loc": "00085:2-21",
    "source": 1,
    "syntax": "def,function",
    "pretty": "function StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "nestingRange": "85:24-85:25",
    "type": "void (void)"
  },
  {
    "loc": "00090:4-18",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00091:4-23",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev"
  },
  {
    "loc": "00094:4-16",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev,_ZN19StructUsedInEmplaceC1EOS_"
  },
  {
    "loc": "00085:2-21",
    "structured": 1,
    "pretty": "StructUsedInEmplace::StructUsedInEmplace",
    "sym": "_ZN19StructUsedInEmplaceC1Ev",
    "type_pretty": null,
    "kind": "method",
    "subsystem": null,
    "parentsym": "T_StructUsedInEmplace",
    "implKind": "",
    "sizeBytes": null,
    "alignmentBytes": null,
    "ownVFPtrBytes": null,
    "bindingSlots": [],
    "ontologySlots": [],
    "supers": [],
    "methods": [],
    "fields": [],
    "overrides": [],
    "props": [
      "instance",
      "user"
    ],
    "variants": [],
    "args": []
  }
]
