tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/main@TypeDependentNewInTemplateReportedAtCallSite.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/ForwardingTemplates.cpp/TypeDependentNewInTemplateReportedAtCallSite
---
[
  {
    "loc": "00005:2-31",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "StructUsedInTypeDependentNew0",
    "contextsym": "T_StructUsedInTypeDependentNew0"
  },
  {
    "loc": "00042:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00043:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00046:17-27",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00047:17-27",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00050:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00051:17-36",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00054:17-37",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00055:17-37",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00059:24-35",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "context": "test",
    "contextsym": "_Z4testv"
  },
  {
    "loc": "00005:2-31",
    "source": 1,
    "syntax": "def,function",
    "pretty": "function StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "nestingRange": "5:34-5:35",
    "type": "void (void)"
  },
  {
    "loc": "00042:17-36",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00043:17-36",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00046:17-27",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00047:17-27",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00050:17-36",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00051:17-36",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00054:17-37",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00055:17-37",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00059:24-35",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev"
  },
  {
    "loc": "00005:2-31",
    "structured": 1,
    "pretty": "StructUsedInTypeDependentNew0::StructUsedInTypeDependentNew0",
    "sym": "_ZN29StructUsedInTypeDependentNew0C1Ev",
    "type_pretty": null,
    "kind": "method",
    "subsystem": null,
    "parentsym": "T_StructUsedInTypeDependentNew0",
    "implKind": "",
    "sizeBytes": null,
    "alignmentBytes": null,
    "ownVFPtrBytes": null,
    "bindingSlots": [],
    "ontologySlots": [],
    "supers": [],
    "methods": [],
    "fields": [],
    "overrides": [],
    "props": [
      "instance",
      "user"
    ],
    "variants": [],
    "args": []
  }
]
