tests/tests/checks/snapshots/analysis/cpp/ForwardingTemplates.cpp/main@TypeIndependentNewInTemplateReportedInTemplate.snap
---
source: src/bin/test-index.rs
expression: "&json_results"
input_file: inputs/analysis/cpp/ForwardingTemplates.cpp/TypeIndependentNewInTemplateReportedInTemplate
---
[
  {
    "loc": "00013:2-32",
    "target": 1,
    "kind": "def",
    "pretty": "StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev",
    "context": "StructUsedInTypeIndependentNew",
    "contextsym": "T_StructUsedInTypeIndependentNew"
  },
  {
    "loc": "00019:10-40",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev",
    "context": "MakeUniqueWithIndex",
    "contextsym": "_Z19MakeUniqueWithIndexiDpOT0_"
  },
  {
    "loc": "00026:10-40",
    "target": 1,
    "kind": "use",
    "pretty": "StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev",
    "context": "MakeUnique",
    "contextsym": "_Z10MakeUniqueDpOT0_"
  },
  {
    "loc": "00013:2-32",
    "source": 1,
    "syntax": "def,function",
    "pretty": "function StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev",
    "nestingRange": "13:35-13:36",
    "type": "void (void)"
  },
  {
    "loc": "00019:10-40",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev"
  },
  {
    "loc": "00026:10-40",
    "source": 1,
    "syntax": "constructor,use",
    "pretty": "constructor StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev"
  },
  {
    "loc": "00013:2-32",
    "structured": 1,
    "pretty": "StructUsedInTypeIndependentNew::StructUsedInTypeIndependentNew",
    "sym": "_ZN30StructUsedInTypeIndependentNewC1Ev",
    "type_pretty": null,
    "kind": "method",
    "subsystem": null,
    "parentsym": "T_StructUsedInTypeIndependentNew",
    "implKind": "",
    "sizeBytes": null,
    "alignmentBytes": null,
    "ownVFPtrBytes": null,
    "bindingSlots": [],
    "ontologySlots": [],
    "supers": [],
    "methods": [],
    "fields": [],
    "overrides": [],
    "props": [
      "instance",
      "user"
    ],
    "variants": [],
    "args": []
  }
]
